# Shattered_Moon

./: .gitignore  CMakeLists.txt  Project.md  README.md
.claude/agents/: all-around-agent.md
gendev/: CMakeLists.txt
gendev/src/: AskCommand.cpp  AskCommand.h  CLI.cpp  CLI.h  CodeGenerator.cpp  CodeGenerator.h  CreateCommand.cpp  CreateCommand.h  FileSearch.cpp  FileSearch.h  main.cpp
gendev/templates/: Component.h.template  Event.h.template  System.cpp.template  System.h.template
shaders/: BasicPixel.hlsl  BasicVertex.hlsl  TerrainPixel.hlsl  TerrainVertex.hlsl
src/: main.cpp
src/core/: AssetLoader.cpp  AssetLoader.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  Memory.cpp  Memory.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
src/ecs/: Component.h  ComponentManager.h  ECS.h  Entity.h  System.h  SystemManager.h  World.cpp  World.h
src/ecs/components/: Components.h  MaterialComponent.h  MeshComponent.h  TagComponent.h  TransformComponent.h
src/editor/: CameraPanel.cpp  CameraPanel.h  ConsolePanel.cpp  ConsolePanel.h  ECSPanel.cpp  ECSPanel.h  EditorUI.cpp  EditorUI.h  ImGuiManager.cpp  ImGuiManager.h  PCGPanel.cpp  PCGPanel.h  StatsPanel.cpp  StatsPanel.h
src/gameplay/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Input.cpp  Input.h  InputAction.cpp  InputAction.h
src/pcg/: Biome.cpp  Biome.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  FBM.cpp  FBM.h  HeightmapGenerator.cpp  HeightmapGenerator.h  Noise.cpp  Noise.h  PCG.h  TerrainLOD.cpp  TerrainLOD.h
src/renderer/: CommandList.cpp  CommandList.h  DX12Core.cpp  DX12Core.h  GPUBuffer.cpp  GPUBuffer.h  Mesh.cpp  Mesh.h  PipelineState.cpp  PipelineState.h  Renderer.cpp  Renderer.h  RootSignature.cpp  RootSignature.h  TerrainRenderer.cpp  TerrainRenderer.h  Texture.cpp  Texture.h
